# io4dolfinx

./: .coveragerc  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  _config.yml  _toc.yml  mwe.py  pyproject.toml  thermal_steady_out.e
.github/workflows/: build_docs.yml  check_formatting.yml  create_legacy_checkpoint.yml  deploy_pages.yml  test_dolfinx_versions.yml  test_package.yml  test_package_openmpi.yml  test_workflow.yml
docs/: adding_backend.md  api.rst  backend.rst  installation.md  meshtags.py  migration_guide.md  original_checkpoint.py  partitioned_mesh.py  quickstart.md  reading_legacy_data.md  snapshot_checkpoint.py  testing.md  time_dependent_mesh.py  writing_functions_checkpoint.py  writing_mesh_checkpoint.py
docs/backends/: adios2.rst  h5py.rst  pyvista.rst  vtkhdf.rst  xdmf.rst
src/adios4dolfinx/: __init__.py  checkpointing.py  comm_helpers.py  interface.py  legacy_readers.py  original_checkpoint.py  readers.py  snapshot.py  structures.py  utils.py  writers.py
src/adios4dolfinx/backends/: __init__.py
src/adios4dolfinx/backends/adios2/: adios2_helpers.py  backend.py  helpers.py
src/adios4dolfinx/backends/h5py/: backend.py
src/adios4dolfinx/backends/pyvista/: backend.py
src/adios4dolfinx/backends/vtkhdf/: backend.py
src/adios4dolfinx/backends/xdmf/: backend.py
src/io4dolfinx/: __init__.py  checkpointing.py  comm_helpers.py  original_checkpoint.py  readers.py  snapshot.py  structures.py  utils.py  writers.py
src/io4dolfinx/backends/: __init__.py
src/io4dolfinx/backends/adios2/: backend.py  helpers.py
src/io4dolfinx/backends/exodus/: backend.py  mesh.py
src/io4dolfinx/backends/h5py/: backend.py
src/io4dolfinx/backends/pyvista/: backend.py
src/io4dolfinx/backends/vtkhdf/: backend.py
src/io4dolfinx/backends/xdmf/: backend.py
tests/: conftest.py  create_legacy_checkpoint.py  create_legacy_data.py  test_attributes.py  test_checkpointing.py  test_checkpointing_vector.py  test_exodus.py  test_geometry_dofmap_reconstruction.py  test_legacy_readers.py  test_mesh_writer.py  test_meshtags.py  test_numpy_vectorization.py  test_original_checkpoint.py  test_pyvista.py  test_snapshot_checkpoint.py  test_version.py  test_vtkhdf.py  test_xdmf.py
